CABLE WORKING WEIGHT BUG FIX
